# FastApi-Basic-Stripe

./: .env.example  pyproject.toml
strapi/database/: db.py
strapi/main_route/: main.py
strapi/models/: payment.py
strapi/strip_config/: strip_config.py
