[tool.poetry]
name = "strapi"
version = "0.1.0"
description = ""
authors = ["azfarmasood4 <azfarmasood22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.19"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
stripe = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
